<resources>
    <string name="app_name">ToDoList</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="save_task">Save task</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="logout">Logout</string>
    <string name="update">Success updated!</string>
    <string name="task_done">Task done</string>
    <string name="task_delete">Task deleted!</string>


</resources>
